// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with performanceTracer common "createQuery" should raise error when a read model is declared twice: addAnnotation 1`] = `Array []`;

exports[`with performanceTracer common "createQuery" should raise error when a read model is declared twice: addError 1`] = `Array []`;

exports[`with performanceTracer common "createQuery" should raise error when a read model is declared twice: addNewSubsegment 1`] = `Array []`;

exports[`with performanceTracer common "createQuery" should raise error when a read model is declared twice: close 1`] = `Array []`;

exports[`with performanceTracer common "createQuery" should raise error when a read model is declared twice: getSegment 1`] = `Array []`;

exports[`with performanceTracer common "createQuery" should raise error when a view model is declared twice: addAnnotation 1`] = `Array []`;

exports[`with performanceTracer common "createQuery" should raise error when a view model is declared twice: addError 1`] = `Array []`;

exports[`with performanceTracer common "createQuery" should raise error when a view model is declared twice: addNewSubsegment 1`] = `Array []`;

exports[`with performanceTracer common "createQuery" should raise error when a view model is declared twice: close 1`] = `Array []`;

exports[`with performanceTracer common "createQuery" should raise error when a view model is declared twice: getSegment 1`] = `Array []`;

exports[`with performanceTracer common "read" should raise error when wrong options for read invocation: addAnnotation 1`] = `Array []`;

exports[`with performanceTracer common "read" should raise error when wrong options for read invocation: addError 1`] = `Array []`;

exports[`with performanceTracer common "read" should raise error when wrong options for read invocation: addNewSubsegment 1`] = `Array []`;

exports[`with performanceTracer common "read" should raise error when wrong options for read invocation: close 1`] = `Array []`;

exports[`with performanceTracer common "read" should raise error when wrong options for read invocation: getSegment 1`] = `Array []`;

exports[`with performanceTracer read models "dispose" should dispose only one time: addAnnotation 1`] = `
Array [
  Array [
    "readModelName",
    "readModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
  Array [
    "readModelName",
    "readOnlyReadModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
  Array [
    "readModelName",
    "brokenReadModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
  Array [
    "readModelName",
    "remoteReadModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
  Array [
    "readModelName",
    "readModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
]
`;

exports[`with performanceTracer read models "dispose" should dispose only one time: addError 1`] = `
Array [
  Array [
    [Error: read-model "readModelName" is disposed],
  ],
]
`;

exports[`with performanceTracer read models "dispose" should dispose only one time: addNewSubsegment 1`] = `
Array [
  Array [
    "dispose",
  ],
  Array [
    "dispose",
  ],
  Array [
    "dispose",
  ],
  Array [
    "dispose",
  ],
  Array [
    "dispose",
  ],
]
`;

exports[`with performanceTracer read models "dispose" should dispose only one time: close 1`] = `
Array [
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
]
`;

exports[`with performanceTracer read models "dispose" should dispose only one time: getSegment 1`] = `
Array [
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
]
`;

exports[`with performanceTracer read models "drop" should drop read model: addAnnotation 1`] = `
Array [
  Array [
    "readModelName",
    "readModelName",
  ],
  Array [
    "origin",
    "resolve:query:drop",
  ],
  Array [
    "readModelName",
    "readModelName",
  ],
  Array [
    "origin",
    "resolve:query:connect",
  ],
  Array [
    "readModelName",
    "readModelName",
  ],
  Array [
    "origin",
    "resolve:query:disconnect",
  ],
]
`;

exports[`with performanceTracer read models "drop" should drop read model: addError 1`] = `Array []`;

exports[`with performanceTracer read models "drop" should drop read model: addNewSubsegment 1`] = `
Array [
  Array [
    "drop",
  ],
  Array [
    "connect",
  ],
  Array [
    "disconnect",
  ],
]
`;

exports[`with performanceTracer read models "drop" should drop read model: close 1`] = `
Array [
  Array [],
  Array [],
  Array [],
]
`;

exports[`with performanceTracer read models "drop" should drop read model: getSegment 1`] = `
Array [
  Array [],
  Array [],
  Array [],
]
`;

exports[`with performanceTracer read models "drop" should raise error when query is disposed: addAnnotation 1`] = `
Array [
  Array [
    "readModelName",
    "readModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
  Array [
    "readModelName",
    "readOnlyReadModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
  Array [
    "readModelName",
    "brokenReadModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
  Array [
    "readModelName",
    "remoteReadModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
  Array [
    "readModelName",
    "readModelName",
  ],
  Array [
    "origin",
    "resolve:query:drop",
  ],
]
`;

exports[`with performanceTracer read models "drop" should raise error when query is disposed: addError 1`] = `
Array [
  Array [
    [Error: read-model "readModelName" is disposed],
  ],
]
`;

exports[`with performanceTracer read models "drop" should raise error when query is disposed: addNewSubsegment 1`] = `
Array [
  Array [
    "dispose",
  ],
  Array [
    "dispose",
  ],
  Array [
    "dispose",
  ],
  Array [
    "dispose",
  ],
  Array [
    "drop",
  ],
]
`;

exports[`with performanceTracer read models "drop" should raise error when query is disposed: close 1`] = `
Array [
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
]
`;

exports[`with performanceTracer read models "drop" should raise error when query is disposed: getSegment 1`] = `
Array [
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
]
`;

exports[`with performanceTracer read models "read" should raise error when a read model does not exist: addAnnotation 1`] = `Array []`;

exports[`with performanceTracer read models "read" should raise error when a read model does not exist: addError 1`] = `Array []`;

exports[`with performanceTracer read models "read" should raise error when a read model does not exist: addNewSubsegment 1`] = `Array []`;

exports[`with performanceTracer read models "read" should raise error when a read model does not exist: close 1`] = `Array []`;

exports[`with performanceTracer read models "read" should raise error when a read model does not exist: getSegment 1`] = `Array []`;

exports[`with performanceTracer read models "read" should raise error when a resolver is not found: addAnnotation 1`] = `
Array [
  Array [
    "readModelName",
    "readModelName",
  ],
  Array [
    "resolverName",
    "notFound",
  ],
  Array [
    "origin",
    "resolve:query:read",
  ],
]
`;

exports[`with performanceTracer read models "read" should raise error when a resolver is not found: addError 1`] = `
Array [
  Array [
    [Error: Resolver "notFound" does not exist],
  ],
]
`;

exports[`with performanceTracer read models "read" should raise error when a resolver is not found: addNewSubsegment 1`] = `
Array [
  Array [
    "read",
  ],
]
`;

exports[`with performanceTracer read models "read" should raise error when a resolver is not found: close 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer read models "read" should raise error when a resolver is not found: getSegment 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer read models "read" should raise error when query is disposed: addAnnotation 1`] = `
Array [
  Array [
    "readModelName",
    "readModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
  Array [
    "readModelName",
    "readOnlyReadModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
  Array [
    "readModelName",
    "brokenReadModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
  Array [
    "readModelName",
    "remoteReadModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
]
`;

exports[`with performanceTracer read models "read" should raise error when query is disposed: addError 1`] = `Array []`;

exports[`with performanceTracer read models "read" should raise error when query is disposed: addNewSubsegment 1`] = `
Array [
  Array [
    "dispose",
  ],
  Array [
    "dispose",
  ],
  Array [
    "dispose",
  ],
  Array [
    "dispose",
  ],
]
`;

exports[`with performanceTracer read models "read" should raise error when query is disposed: close 1`] = `
Array [
  Array [],
  Array [],
  Array [],
  Array [],
]
`;

exports[`with performanceTracer read models "read" should raise error when query is disposed: getSegment 1`] = `
Array [
  Array [],
  Array [],
  Array [],
  Array [],
]
`;

exports[`with performanceTracer read models "read" should return { error, ... } when a read model is broken: addAnnotation 1`] = `
Array [
  Array [
    "readModelName",
    "brokenReadModelName",
  ],
  Array [
    "eventCount",
    1,
  ],
  Array [
    "origin",
    "resolve:query:updateByEvents",
  ],
  Array [
    "readModelName",
    "brokenReadModelName",
  ],
  Array [
    "origin",
    "resolve:query:connect",
  ],
  Array [
    "readModelName",
    "brokenReadModelName",
  ],
  Array [
    "eventType",
    "BROKEN",
  ],
  Array [
    "origin",
    "resolve:query:applyEvent",
  ],
  Array [
    "readModelName",
    "brokenReadModelName",
  ],
  Array [
    "origin",
    "resolve:query:disconnect",
  ],
]
`;

exports[`with performanceTracer read models "read" should return { error, ... } when a read model is broken: addError 1`] = `
Array [
  Array [
    [Error: BROKEN],
  ],
  Array [
    Object {
      "error": [Error: BROKEN],
      "eventSubscriber": "brokenReadModelName",
      "failedEvent": Object {
        "aggregateId": "id1",
        "aggregateVersion": 1,
        "payload": Object {},
        "timestamp": 1,
        "type": "BROKEN",
      },
      "successEvent": null,
    },
  ],
]
`;

exports[`with performanceTracer read models "read" should return { error, ... } when a read model is broken: addNewSubsegment 1`] = `
Array [
  Array [
    "updateByEvents",
  ],
  Array [
    "connect",
  ],
  Array [
    "applyEvent",
  ],
  Array [
    "disconnect",
  ],
]
`;

exports[`with performanceTracer read models "read" should return { error, ... } when a read model is broken: close 1`] = `
Array [
  Array [],
  Array [],
  Array [],
  Array [],
]
`;

exports[`with performanceTracer read models "read" should return { error, ... } when a read model is broken: getSegment 1`] = `
Array [
  Array [],
  Array [],
  Array [],
  Array [],
]
`;

exports[`with performanceTracer read models "readAndSerialize" should raise error when query is disposed: addAnnotation 1`] = `
Array [
  Array [
    "readModelName",
    "readModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
  Array [
    "readModelName",
    "readOnlyReadModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
  Array [
    "readModelName",
    "brokenReadModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
  Array [
    "readModelName",
    "remoteReadModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
]
`;

exports[`with performanceTracer read models "readAndSerialize" should raise error when query is disposed: addError 1`] = `Array []`;

exports[`with performanceTracer read models "readAndSerialize" should raise error when query is disposed: addNewSubsegment 1`] = `
Array [
  Array [
    "dispose",
  ],
  Array [
    "dispose",
  ],
  Array [
    "dispose",
  ],
  Array [
    "dispose",
  ],
]
`;

exports[`with performanceTracer read models "readAndSerialize" should raise error when query is disposed: close 1`] = `
Array [
  Array [],
  Array [],
  Array [],
  Array [],
]
`;

exports[`with performanceTracer read models "readAndSerialize" should raise error when query is disposed: getSegment 1`] = `
Array [
  Array [],
  Array [],
  Array [],
  Array [],
]
`;

exports[`with performanceTracer read models "updateByEvents" should raise error when a projection is not found: addAnnotation 1`] = `
Array [
  Array [
    "readModelName",
    "readOnlyReadModelName",
  ],
  Array [
    "eventCount",
    0,
  ],
  Array [
    "origin",
    "resolve:query:updateByEvents",
  ],
]
`;

exports[`with performanceTracer read models "updateByEvents" should raise error when a projection is not found: addError 1`] = `
Array [
  Array [
    [Error: updating by events is prohibited when "readOnlyReadModelName" projection is not specified],
  ],
]
`;

exports[`with performanceTracer read models "updateByEvents" should raise error when a projection is not found: addNewSubsegment 1`] = `
Array [
  Array [
    "updateByEvents",
  ],
]
`;

exports[`with performanceTracer read models "updateByEvents" should raise error when a projection is not found: close 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer read models "updateByEvents" should raise error when a projection is not found: getSegment 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer read models "updateByEvents" should raise error when events is not array: addAnnotation 1`] = `Array []`;

exports[`with performanceTracer read models "updateByEvents" should raise error when events is not array: addError 1`] = `Array []`;

exports[`with performanceTracer read models "updateByEvents" should raise error when events is not array: addNewSubsegment 1`] = `Array []`;

exports[`with performanceTracer read models "updateByEvents" should raise error when events is not array: close 1`] = `Array []`;

exports[`with performanceTracer read models "updateByEvents" should raise error when events is not array: getSegment 1`] = `Array []`;

exports[`with performanceTracer read models "updateByEvents" should raise error when query is disposed: addAnnotation 1`] = `
Array [
  Array [
    "readModelName",
    "readModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
  Array [
    "readModelName",
    "readOnlyReadModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
  Array [
    "readModelName",
    "brokenReadModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
  Array [
    "readModelName",
    "remoteReadModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
  Array [
    "readModelName",
    "readModelName",
  ],
  Array [
    "eventCount",
    1,
  ],
  Array [
    "origin",
    "resolve:query:updateByEvents",
  ],
]
`;

exports[`with performanceTracer read models "updateByEvents" should raise error when query is disposed: addError 1`] = `
Array [
  Array [
    [Error: read-model "readModelName" is disposed],
  ],
]
`;

exports[`with performanceTracer read models "updateByEvents" should raise error when query is disposed: addNewSubsegment 1`] = `
Array [
  Array [
    "dispose",
  ],
  Array [
    "dispose",
  ],
  Array [
    "dispose",
  ],
  Array [
    "dispose",
  ],
  Array [
    "updateByEvents",
  ],
]
`;

exports[`with performanceTracer read models "updateByEvents" should raise error when query is disposed: close 1`] = `
Array [
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
]
`;

exports[`with performanceTracer read models "updateByEvents" should raise error when query is disposed: getSegment 1`] = `
Array [
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
]
`;

exports[`with performanceTracer read models "updateByEvents" should raise error when updating had been interrupted: addAnnotation 1`] = `
Array [
  Array [
    "readModelName",
    "remoteReadModelName",
  ],
  Array [
    "eventCount",
    2,
  ],
  Array [
    "origin",
    "resolve:query:updateByEvents",
  ],
  Array [
    "readModelName",
    "remoteReadModelName",
  ],
  Array [
    "origin",
    "resolve:query:connect",
  ],
  Array [
    "readModelName",
    "readModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
  Array [
    "readModelName",
    "readOnlyReadModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
  Array [
    "readModelName",
    "remoteReadModelName",
  ],
  Array [
    "eventType",
    "SET",
  ],
  Array [
    "origin",
    "resolve:query:applyEvent",
  ],
  Array [
    "readModelName",
    "brokenReadModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
  Array [
    "readModelName",
    "remoteReadModelName",
  ],
  Array [
    "origin",
    "resolve:query:dispose",
  ],
  Array [
    "readModelName",
    "remoteReadModelName",
  ],
  Array [
    "origin",
    "resolve:query:disconnect",
  ],
]
`;

exports[`with performanceTracer read models "updateByEvents" should raise error when updating had been interrupted: addError 1`] = `
Array [
  Array [
    [Error: read-model "remoteReadModelName" updating had been interrupted],
  ],
  Array [
    Object {
      "error": [Error: read-model "remoteReadModelName" updating had been interrupted],
      "eventSubscriber": "remoteReadModelName",
      "failedEvent": Object {
        "aggregateId": "id",
        "aggregateVersion": 2,
        "payload": Object {
          "key": 3,
          "value": 4,
        },
        "timestamp": 2,
        "type": "SET",
      },
      "successEvent": Object {
        "aggregateId": "id",
        "aggregateVersion": 1,
        "payload": Object {
          "key": 1,
          "value": 2,
        },
        "timestamp": 1,
        "type": "SET",
      },
    },
  ],
]
`;

exports[`with performanceTracer read models "updateByEvents" should raise error when updating had been interrupted: addNewSubsegment 1`] = `
Array [
  Array [
    "updateByEvents",
  ],
  Array [
    "connect",
  ],
  Array [
    "dispose",
  ],
  Array [
    "dispose",
  ],
  Array [
    "applyEvent",
  ],
  Array [
    "dispose",
  ],
  Array [
    "dispose",
  ],
  Array [
    "applyEvent",
  ],
  Array [
    "disconnect",
  ],
]
`;

exports[`with performanceTracer read models "updateByEvents" should raise error when updating had been interrupted: close 1`] = `
Array [
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
]
`;

exports[`with performanceTracer read models "updateByEvents" should raise error when updating had been interrupted: getSegment 1`] = `
Array [
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
  Array [],
]
`;

exports[`with performanceTracer view models with snapshots "dispose" should dispose only one time: addAnnotation 1`] = `
Array [
  Array [
    "viewModelName",
    "viewModelName",
  ],
  Array [
    "viewModelName",
    "viewModelName",
  ],
]
`;

exports[`with performanceTracer view models with snapshots "dispose" should dispose only one time: addError 1`] = `
Array [
  Array [
    [Error: View model "viewModelName" is disposed],
  ],
]
`;

exports[`with performanceTracer view models with snapshots "dispose" should dispose only one time: addNewSubsegment 1`] = `
Array [
  Array [
    "dispose",
  ],
  Array [
    "dispose",
  ],
]
`;

exports[`with performanceTracer view models with snapshots "dispose" should dispose only one time: close 1`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`with performanceTracer view models with snapshots "dispose" should dispose only one time: getSegment 1`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`with performanceTracer view models with snapshots "drop" should raise error on view models: addAnnotation 1`] = `
Array [
  Array [
    "viewModelName",
    "viewModelName",
  ],
  Array [
    "origin",
    "resolve:query:drop",
  ],
]
`;

exports[`with performanceTracer view models with snapshots "drop" should raise error on view models: addError 1`] = `
Array [
  Array [
    [Error: Snapshot cleaning for view-model "viewModelName" is not implemented],
  ],
]
`;

exports[`with performanceTracer view models with snapshots "drop" should raise error on view models: addNewSubsegment 1`] = `
Array [
  Array [
    "drop",
  ],
]
`;

exports[`with performanceTracer view models with snapshots "drop" should raise error on view models: close 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer view models with snapshots "drop" should raise error on view models: getSegment 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer view models with snapshots "drop" should raise error when query is disposed: addAnnotation 1`] = `
Array [
  Array [
    "viewModelName",
    "viewModelName",
  ],
  Array [
    "viewModelName",
    "viewModelName",
  ],
  Array [
    "origin",
    "resolve:query:updateByEvents",
  ],
]
`;

exports[`with performanceTracer view models with snapshots "drop" should raise error when query is disposed: addError 1`] = `
Array [
  Array [
    [Error: View model "viewModelName" is disposed],
  ],
]
`;

exports[`with performanceTracer view models with snapshots "drop" should raise error when query is disposed: addNewSubsegment 1`] = `
Array [
  Array [
    "dispose",
  ],
  Array [
    "updateByEvents",
  ],
]
`;

exports[`with performanceTracer view models with snapshots "drop" should raise error when query is disposed: close 1`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`with performanceTracer view models with snapshots "drop" should raise error when query is disposed: getSegment 1`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`with performanceTracer view models with snapshots "read" should raise error when a view model does not exist: addAnnotation 1`] = `Array []`;

exports[`with performanceTracer view models with snapshots "read" should raise error when a view model does not exist: addError 1`] = `Array []`;

exports[`with performanceTracer view models with snapshots "read" should raise error when a view model does not exist: addNewSubsegment 1`] = `Array []`;

exports[`with performanceTracer view models with snapshots "read" should raise error when a view model does not exist: close 1`] = `Array []`;

exports[`with performanceTracer view models with snapshots "read" should raise error when a view model does not exist: getSegment 1`] = `Array []`;

exports[`with performanceTracer view models with snapshots "read" should raise error when aggregateIds is a bad value: addAnnotation 1`] = `
Array [
  Array [
    "viewModelName",
    "viewModelName",
  ],
  Array [
    "origin",
    "resolve:query:read",
  ],
]
`;

exports[`with performanceTracer view models with snapshots "read" should raise error when aggregateIds is a bad value: addError 1`] = `
Array [
  Array [
    [Error: View model "viewModelName" requires aggregates identifier list],
  ],
]
`;

exports[`with performanceTracer view models with snapshots "read" should raise error when aggregateIds is a bad value: addNewSubsegment 1`] = `
Array [
  Array [
    "read",
  ],
]
`;

exports[`with performanceTracer view models with snapshots "read" should raise error when aggregateIds is a bad value: close 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer view models with snapshots "read" should raise error when aggregateIds is a bad value: getSegment 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer view models with snapshots "read" should raise error when query is disposed: addAnnotation 1`] = `
Array [
  Array [
    "viewModelName",
    "viewModelName",
  ],
]
`;

exports[`with performanceTracer view models with snapshots "read" should raise error when query is disposed: addError 1`] = `Array []`;

exports[`with performanceTracer view models with snapshots "read" should raise error when query is disposed: addNewSubsegment 1`] = `
Array [
  Array [
    "dispose",
  ],
]
`;

exports[`with performanceTracer view models with snapshots "read" should raise error when query is disposed: close 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer view models with snapshots "read" should raise error when query is disposed: getSegment 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer view models with snapshots "read" should reuse working build process: addAnnotation 1`] = `
Array [
  Array [
    "viewModelName",
    "viewModelName",
  ],
  Array [
    "origin",
    "resolve:query:read",
  ],
  Array [
    "viewModelName",
    "viewModelName",
  ],
  Array [
    "origin",
    "resolve:query:read",
  ],
]
`;

exports[`with performanceTracer view models with snapshots "read" should reuse working build process: addError 1`] = `Array []`;

exports[`with performanceTracer view models with snapshots "read" should reuse working build process: addNewSubsegment 1`] = `
Array [
  Array [
    "read",
  ],
  Array [
    "read",
  ],
]
`;

exports[`with performanceTracer view models with snapshots "read" should reuse working build process: close 1`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`with performanceTracer view models with snapshots "read" should reuse working build process: getSegment 1`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`with performanceTracer view models with snapshots "readAndSerialize" should raise error when aggregateIds is a bad value: addAnnotation 1`] = `Array []`;

exports[`with performanceTracer view models with snapshots "readAndSerialize" should raise error when aggregateIds is a bad value: addError 1`] = `Array []`;

exports[`with performanceTracer view models with snapshots "readAndSerialize" should raise error when aggregateIds is a bad value: addNewSubsegment 1`] = `Array []`;

exports[`with performanceTracer view models with snapshots "readAndSerialize" should raise error when aggregateIds is a bad value: close 1`] = `Array []`;

exports[`with performanceTracer view models with snapshots "readAndSerialize" should raise error when aggregateIds is a bad value: getSegment 1`] = `Array []`;

exports[`with performanceTracer view models with snapshots "readAndSerialize" should raise error when query is disposed: addAnnotation 1`] = `
Array [
  Array [
    "viewModelName",
    "viewModelName",
  ],
]
`;

exports[`with performanceTracer view models with snapshots "readAndSerialize" should raise error when query is disposed: addError 1`] = `Array []`;

exports[`with performanceTracer view models with snapshots "readAndSerialize" should raise error when query is disposed: addNewSubsegment 1`] = `
Array [
  Array [
    "dispose",
  ],
]
`;

exports[`with performanceTracer view models with snapshots "readAndSerialize" should raise error when query is disposed: close 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer view models with snapshots "readAndSerialize" should raise error when query is disposed: getSegment 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer view models with snapshots "updateByEvents" should raise error on view models: addAnnotation 1`] = `
Array [
  Array [
    "viewModelName",
    "viewModelName",
  ],
  Array [
    "origin",
    "resolve:query:updateByEvents",
  ],
]
`;

exports[`with performanceTracer view models with snapshots "updateByEvents" should raise error on view models: addError 1`] = `
Array [
  Array [
    [Error: View model "viewModelName" cannot be updated by events],
  ],
]
`;

exports[`with performanceTracer view models with snapshots "updateByEvents" should raise error on view models: addNewSubsegment 1`] = `
Array [
  Array [
    "updateByEvents",
  ],
]
`;

exports[`with performanceTracer view models with snapshots "updateByEvents" should raise error on view models: close 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer view models with snapshots "updateByEvents" should raise error on view models: getSegment 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer view models with snapshots "updateByEvents" should raise error when query is disposed: addAnnotation 1`] = `
Array [
  Array [
    "viewModelName",
    "viewModelName",
  ],
  Array [
    "viewModelName",
    "viewModelName",
  ],
  Array [
    "origin",
    "resolve:query:updateByEvents",
  ],
]
`;

exports[`with performanceTracer view models with snapshots "updateByEvents" should raise error when query is disposed: addError 1`] = `
Array [
  Array [
    [Error: View model "viewModelName" is disposed],
  ],
]
`;

exports[`with performanceTracer view models with snapshots "updateByEvents" should raise error when query is disposed: addNewSubsegment 1`] = `
Array [
  Array [
    "dispose",
  ],
  Array [
    "updateByEvents",
  ],
]
`;

exports[`with performanceTracer view models with snapshots "updateByEvents" should raise error when query is disposed: close 1`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`with performanceTracer view models with snapshots "updateByEvents" should raise error when query is disposed: getSegment 1`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`with performanceTracer view models without snapshots "dispose" should dispose only one time: addAnnotation 1`] = `
Array [
  Array [
    "viewModelName",
    "viewModelName",
  ],
  Array [
    "viewModelName",
    "viewModelName",
  ],
]
`;

exports[`with performanceTracer view models without snapshots "dispose" should dispose only one time: addError 1`] = `
Array [
  Array [
    [Error: View model "viewModelName" is disposed],
  ],
]
`;

exports[`with performanceTracer view models without snapshots "dispose" should dispose only one time: addNewSubsegment 1`] = `
Array [
  Array [
    "dispose",
  ],
  Array [
    "dispose",
  ],
]
`;

exports[`with performanceTracer view models without snapshots "dispose" should dispose only one time: close 1`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`with performanceTracer view models without snapshots "dispose" should dispose only one time: getSegment 1`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`with performanceTracer view models without snapshots "drop" should raise error on view-model: addAnnotation 1`] = `
Array [
  Array [
    "viewModelName",
    "viewModelName",
  ],
  Array [
    "origin",
    "resolve:query:drop",
  ],
]
`;

exports[`with performanceTracer view models without snapshots "drop" should raise error on view-model: addError 1`] = `
Array [
  Array [
    [Error: Snapshot cleaning for view-model "viewModelName" is not implemented],
  ],
]
`;

exports[`with performanceTracer view models without snapshots "drop" should raise error on view-model: addNewSubsegment 1`] = `
Array [
  Array [
    "drop",
  ],
]
`;

exports[`with performanceTracer view models without snapshots "drop" should raise error on view-model: close 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer view models without snapshots "drop" should raise error on view-model: getSegment 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer view models without snapshots "drop" should raise error when disposed: addAnnotation 1`] = `
Array [
  Array [
    "viewModelName",
    "viewModelName",
  ],
  Array [
    "viewModelName",
    "viewModelName",
  ],
  Array [
    "origin",
    "resolve:query:drop",
  ],
]
`;

exports[`with performanceTracer view models without snapshots "drop" should raise error when disposed: addError 1`] = `
Array [
  Array [
    [Error: View model "viewModelName" is disposed],
  ],
]
`;

exports[`with performanceTracer view models without snapshots "drop" should raise error when disposed: addNewSubsegment 1`] = `
Array [
  Array [
    "dispose",
  ],
  Array [
    "drop",
  ],
]
`;

exports[`with performanceTracer view models without snapshots "drop" should raise error when disposed: close 1`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`with performanceTracer view models without snapshots "drop" should raise error when disposed: getSegment 1`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`with performanceTracer view models without snapshots "read" should raise error when aggregateIds is a bad value: addAnnotation 1`] = `
Array [
  Array [
    "viewModelName",
    "viewModelName",
  ],
  Array [
    "origin",
    "resolve:query:read",
  ],
]
`;

exports[`with performanceTracer view models without snapshots "read" should raise error when aggregateIds is a bad value: addError 1`] = `
Array [
  Array [
    [Error: View model "viewModelName" requires aggregates identifier list],
  ],
]
`;

exports[`with performanceTracer view models without snapshots "read" should raise error when aggregateIds is a bad value: addNewSubsegment 1`] = `
Array [
  Array [
    "read",
  ],
]
`;

exports[`with performanceTracer view models without snapshots "read" should raise error when aggregateIds is a bad value: close 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer view models without snapshots "read" should raise error when aggregateIds is a bad value: getSegment 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer view models without snapshots "read" should raise error when query is disposed: addAnnotation 1`] = `
Array [
  Array [
    "viewModelName",
    "viewModelName",
  ],
]
`;

exports[`with performanceTracer view models without snapshots "read" should raise error when query is disposed: addError 1`] = `Array []`;

exports[`with performanceTracer view models without snapshots "read" should raise error when query is disposed: addNewSubsegment 1`] = `
Array [
  Array [
    "dispose",
  ],
]
`;

exports[`with performanceTracer view models without snapshots "read" should raise error when query is disposed: close 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer view models without snapshots "read" should raise error when query is disposed: getSegment 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer view models without snapshots "read" should reuse working build process: addAnnotation 1`] = `
Array [
  Array [
    "viewModelName",
    "viewModelName",
  ],
  Array [
    "origin",
    "resolve:query:read",
  ],
  Array [
    "viewModelName",
    "viewModelName",
  ],
  Array [
    "origin",
    "resolve:query:read",
  ],
]
`;

exports[`with performanceTracer view models without snapshots "read" should reuse working build process: addError 1`] = `Array []`;

exports[`with performanceTracer view models without snapshots "read" should reuse working build process: addNewSubsegment 1`] = `
Array [
  Array [
    "read",
  ],
  Array [
    "read",
  ],
]
`;

exports[`with performanceTracer view models without snapshots "read" should reuse working build process: close 1`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`with performanceTracer view models without snapshots "read" should reuse working build process: getSegment 1`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`with performanceTracer view models without snapshots "readAndSerialize" should raise error when aggregateIds is a bad value: addAnnotation 1`] = `Array []`;

exports[`with performanceTracer view models without snapshots "readAndSerialize" should raise error when aggregateIds is a bad value: addError 1`] = `Array []`;

exports[`with performanceTracer view models without snapshots "readAndSerialize" should raise error when aggregateIds is a bad value: addNewSubsegment 1`] = `Array []`;

exports[`with performanceTracer view models without snapshots "readAndSerialize" should raise error when aggregateIds is a bad value: close 1`] = `Array []`;

exports[`with performanceTracer view models without snapshots "readAndSerialize" should raise error when aggregateIds is a bad value: getSegment 1`] = `Array []`;

exports[`with performanceTracer view models without snapshots "readAndSerialize" should raise error when query is disposed: addAnnotation 1`] = `
Array [
  Array [
    "viewModelName",
    "viewModelName",
  ],
]
`;

exports[`with performanceTracer view models without snapshots "readAndSerialize" should raise error when query is disposed: addError 1`] = `Array []`;

exports[`with performanceTracer view models without snapshots "readAndSerialize" should raise error when query is disposed: addNewSubsegment 1`] = `
Array [
  Array [
    "dispose",
  ],
]
`;

exports[`with performanceTracer view models without snapshots "readAndSerialize" should raise error when query is disposed: close 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer view models without snapshots "readAndSerialize" should raise error when query is disposed: getSegment 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer view models without snapshots "updateByEvents" should raise error on view models: addAnnotation 1`] = `
Array [
  Array [
    "viewModelName",
    "viewModelName",
  ],
  Array [
    "origin",
    "resolve:query:updateByEvents",
  ],
]
`;

exports[`with performanceTracer view models without snapshots "updateByEvents" should raise error on view models: addError 1`] = `
Array [
  Array [
    [Error: View model "viewModelName" cannot be updated by events],
  ],
]
`;

exports[`with performanceTracer view models without snapshots "updateByEvents" should raise error on view models: addNewSubsegment 1`] = `
Array [
  Array [
    "updateByEvents",
  ],
]
`;

exports[`with performanceTracer view models without snapshots "updateByEvents" should raise error on view models: close 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer view models without snapshots "updateByEvents" should raise error on view models: getSegment 1`] = `
Array [
  Array [],
]
`;

exports[`with performanceTracer view models without snapshots "updateByEvents" should raise error when disposed: addAnnotation 1`] = `
Array [
  Array [
    "viewModelName",
    "viewModelName",
  ],
  Array [
    "viewModelName",
    "viewModelName",
  ],
  Array [
    "origin",
    "resolve:query:updateByEvents",
  ],
]
`;

exports[`with performanceTracer view models without snapshots "updateByEvents" should raise error when disposed: addError 1`] = `
Array [
  Array [
    [Error: View model "viewModelName" is disposed],
  ],
]
`;

exports[`with performanceTracer view models without snapshots "updateByEvents" should raise error when disposed: addNewSubsegment 1`] = `
Array [
  Array [
    "dispose",
  ],
  Array [
    "updateByEvents",
  ],
]
`;

exports[`with performanceTracer view models without snapshots "updateByEvents" should raise error when disposed: close 1`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`with performanceTracer view models without snapshots "updateByEvents" should raise error when disposed: getSegment 1`] = `
Array [
  Array [],
  Array [],
]
`;
